_config.yaml modified

--- a/_config.yaml
+++ b/_config.yaml
@@ -6,15 +6,15 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
-title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://pranavparidhan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+# locale                   : "en-US"
+# title                    : "Your Name / Site Title"
+# title_separator          : "-"
+# name                     : &name "Your Name"
+# description              : &description "personal description"
+# url                      : https://pranavparidhan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# baseurl                  : "" # the subpath of your site, e.g. "/blog"
 
- - scope:
-      path: "classifieds"
-    values:
-      image: true
+# - scope:
+#      path: "classifieds"
+#    values:
+#      image: true
