--- a/_config.yaml
+++ b/_config.yaml
@@ -14,7 +14,8 @@
 # url                      : https://pranavparidhan.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 # baseurl                  : "" # the subpath of your site, e.g. "/blog"
 
- - scope:
+defaults:
+  - scope:
       path: "classifieds"
     values:
       image: true
